<resources>
    <string name="app_name">CMPT 276 Project</string>
    <string name="credits_title">Credits</string>
    <string name="game_history_information_label">Date          Total Players          Score          Achievement</string>
    <string name="history_title">History</string>
    <string name="new_game_text">New Game</string>
    <string name="ask_total_players">How many players will there be?</string>
    <string name="max_score">Player Max Score</string>
    <string name="min_score">Player Min Score</string>
    <string name="game_name">Game Name</string>
    <string name="save">Save</string>
    <string name="game_configuration">Game Configuration</string>
    <string name="back">Back</string>
    <string name="Back_Button_blerb">Your Changes Have Not Been Saved</string>
    <string name="delete">Delete</string>
    <string name="delete_blerb">Are you sure you want to delete this game? Plays of this game will also be deleted.</string>
    <string name="credit_Info">
        \n
        Welcome to the Game Score Collections App by the Nitrogen Team. This app was
        created by Tiffanie, Sallin, Serena and Shadman.\n
        We have used resources from the following sources to make
        this game:\n
        <a href="https://www.flaticon.com/free-icon/game-boy_2094405">Game Boy Icon</a>\n
        <a href="https://www.flaticon.com/free-icon/playing-cards_261787">Playing Card Icon</a>\n
        <a href="https://thenounproject.com/browse/icons/term/chess-piece/?iconspage=1">Chess Piece Icon</a>\n
        <a href="https://www.youtube.com/watch?v=4lEnLTqsnaw">Animation Tutorial</a>\n
        <a href="https://www.youtube.com/watch?v=kYLIsVkwisU">Bubble Animation Tutorial</a>\n
        <a href="https://www.pngwing.com/en/free-png-zzwaa">Beach Background</a>\n
        <a href="https://www.youtube.com/watch?v=GUbui0MlmsU">Passing Variable From Activity to Fragment Tutorial</a>\n
        <a href="https://www.bezkoder.com/java-android-read-json-file-assets-gson/">Read JSON Files from Assets using Gson</a>\n
        <a href="https://www.pngitem.com/middle/JxoJhx_cartoon-whale-png-blue-whale-clip-art-transparent/">Blue Whale Icon </a>\n
        <a href="https://imgbin.com/png/vxgvKKQh/cartoon-great-white-shark-png">Shark Icon</a>\n
        <a href="https://www.nicepng.com/ourpic/u2q8t4u2t4w7o0q8_squid-tentacles-png-squid-png/">Squid Icon</a>\n
        <a href="https://www.pngegg.com/en/search?q=dolphins+">Dolphin Icon</a>\n
        <a href="https://www.kindpng.com/imgv/owRwbb_transparent-spongebob-jellyfish-png-jelly-fish-clipart-png/">Jellyfish Icon</a>\n
        <a href="https://www.pngmart.com/image/343054">Sea Snail Icon</a>\n
        <a href="https://toppng.com/free-image/shrimp-cartoon-png-cartoon-shrimp-PNG-free-PNG-Images_182554">Shrimp Icon</a>\n
        <a href="https://lovepik.com/image-401347193/octopus.html">Octopus Icon</a>\n
        <a href="https://www.deviantart.com/ashishcha/art/Frogfish-777589559">Frogfish Icon</a>\n
        <a href="https://www.pinterest.ca/pin/382243087127997482/">Blobfish Icon</a>\n
        <a href="https://imgbin.com/png/Ja0mnsUB/flying-squirrel-bat-raccoon-rodent-png">Flying Squirrel Icon</a>\n
        <a href="https://www.pngegg.com/en/png-wthuc">Koala Icon</a>\n
        <a href="https://www.pngwing.com/en/free-png-bbseq">Peacock Icon</a>\n
        <a href="https://www.flaticon.com/free-icon/chimpanzee_427581">Chimpanzee icon</a>\n
        <a href="https://www.cleanpng.com/png-red-kangaroo-macropodidae-clip-art-kangaroo-1465083/">Kangaroo Icon</a>\n
        <a href="https://www.pngitem.com/middle/hRoimwT_impala-png-image-with-transparent-background-silhouette-antelope/">Antelope Icon</a>\n
        <a href="https://www.pngitem.com/middle/TTbiRT_tiger-tiger-icon-png-transparent-png/">Tiger Icon</a>\n
        <a href="https://www.pngitem.com/middle/hRwRmmT_livestock-monochrome-photography-carnivoran-rhino-clipart-black-and/">Rhinoceros Icon</a>\n
        <a href="https://www.pngitem.com/middle/bJiTJo_african-elephant-borneo-elephant-white-elephant-clip-black/">Elephant Icon</a>\n
        <a href="https://www.freeiconspng.com/downloadimg/32093">Chicken Icon</a>\n
        <a href="https://www.pngegg.com/en/png-wmdej">Pigeon Icon</a>\n
        <a href="https://www.nicepng.com/ourpic/u2e6a9e6y3i1t4u2_bat-little-brown-bat-new-england/">Bat Icon</a>\n
        <a href="https://www.flaticon.com/free-icon/barn-owl_3362212">Barn Owl Icon</a>\n
        <a href="https://www.pngwing.com/en/free-png-kgntn">Bald Eagle Icon</a>\n
        <a href="https://imgbin.com/png/Xp0BZcJf/france-crows-heraldry-coat-of-arms-raven-png">Alphine Chough Icon</a>\n
        <a href="https://www.pngwing.com/en/free-png-znpmu">Whooper Swan Icon</a>\n
        <a href="https://www.pngwing.com/en/free-png-zgdqj">Red Crowned Crane Icon</a>\n
        <a href="https://www.pngwing.com/en/free-png-hibed">Peregrine Falcon Icon</a>\n
        <a href="https://www.pngwing.com/en/free-png-bstmb">Vulture Icon</a>\n
        <a href="https://www.youtube.com/watch?v=fIWPSni7kUk">Sound Pool Tutorial</a>\n
        <a href="https://freesound.org/people/Unlistenable/sounds/391539/">Happy Sound</a>\n
        <a href="https://www.youtube.com/watch?v=icmQOZp4p6It=27s">Splash screen with Animations using Motion Layout</a>\n
        <a href="https://developer.android.com/training/camera-deprecated/photobasics">Take Photos</a>\n
        <a href="https://stackoverflow.com/questions/60027883/take-photo-in-android-app-and-save-it-into-gallery">Take Photos and Save to Gallery</a>\n
        <a href="https://www.youtube.com/watch?time_continue=8v=YLUmfyGFjnUfeature=emb_logo">How to Display Image in ImageView</a>\n
        <a href="https://www.youtube.com/watch?v=oLcxTunwaFk">How to Save Image to External Storage</a>\n
        <a href="https://gamedevacademy.org/android-camera-access-tutorial/">How to Access Camera</a>\n
        <a href="https://stackoverflow.com/questions/54275594/how-to-start-camera-from-fragment-in-android">How to Start Camera from Fragment</a>\n
        <a href="https://www.youtube.com/watch?v=LjQmxg8xwGQ">Dynamic Views</a>\n
        <a href="https://www.youtube.com/playlist?list=PLhPyEFL5u-i1Gz_U-msxrHuWsTHbmwp24">Android Camera and Photo App</a>\n
        <a href="https://www.youtube.com/watch?v=pi1tq-bp7uA">Create Simple Bar Graph</a>\n
        <a href="https://www.youtube.com/watch?v=dzZQNsHhqQst=416s">How to Implement Chart</a>\n
        <a href="https://github.com/PhilJay/MPAndroidChart">Android Chart</a>\n
        <a href="https://htmlcolorcodes.com/colors/shades-of-blue/">Blue Shade HTML Codes</a>

    </string>
    <string name="adding_tutorial_message">
        Just tap on the "New Game" button
        and input the score for each player followed by tapping "Enter" button.\n
        Tap anywhere to continue.
    </string>
    <string name="empty_game_manager_text">Your Game Manager is empty! Click here to add a game configuration!</string>
    <string name="options">Options</string>
    <string name="game_options">Game Options</string>
    <string name="tv_theme">Theme</string>
    <string name="tv_difficulty">Difficulty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clear_text_blerb" />
    <string name="clear_text">Are you sure you want to clear all your games?</string>
    <string name="tiers">Tiers</string>
    <string name="level">Level</string>
    <string name="of_times_earned"># of times earned</string>
    <string name="tables">Tables</string>
    <string name="histograms">Histograms</string>
    <string name="table_view">Table View</string>
    <string name="histogram">Histogram</string>
    <string name="achievement_statistics">Achievement\n Statistics</string>
    <string name="highest_level_achieved_text">Congratulations on achieving the highest level!</string>
    <string name="date">Date</string>
    <string name="achievement">Achievement</string>
    <string name="number_of_players">Number of Players:</string>
    <string name="score">Score:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="add">Add</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>