<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_marginBottom="4dp"
    card_view:cardPreventCornerOverlap="true"
    card_view:cardUseCompatPadding="true"
    card_view:cardCornerRadius="5dp"
    android:backgroundTint="#faf1d9">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/playDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_gravity="left"
                android:layout_marginEnd="50dp"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/playTier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/achievement"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/playDifficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginEnd="10dp"
                android:text="@string/difficulty"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/playerNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:text="@string/number_of_players"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/playScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>