<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img2"
    tools:context=".AddEditPlayActivity">

    <!--    <TextView-->
    <!--        android:id="@+id/tvTotalScoreQuestion2"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="52dp"-->
    <!--        android:background="@android:drawable/screen_background_dark_transparent"-->
    <!--        android:text="What is the difficulty level?"-->
    <!--        android:textColor="@color/white"-->
    <!--        android:textSize="20sp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/etTotalScore" />-->

    <TextView
        android:id="@+id/listViewMain3"
        android:layout_width="274dp"
        android:layout_height="369dp"
        android:background="@drawable/gamecategorieslist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#71B3D8"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnEnter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewMain3" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="235dp"
        android:layout_height="320dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingBackButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:clickable="true"
        android:rotation="180"
        app:backgroundTint="#70B2D7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add"
        app:srcCompat="@drawable/ic_baseline_arrow_forward_24" />


    <Button
        android:id="@+id/btnEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#71B3D8"
        android:backgroundTintMode="add"
        android:enabled="true"
        android:gravity="center"
        android:text="Enter"
        app:icon="@drawable/rounded_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewMain3" />

    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="246dp"
        android:layout_height="40dp"
        android:background="@drawable/main_title"
        android:gravity="center"
        android:text="@string/new_game_text"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/listViewMain3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/optionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#70B2D7"
        android:text="@string/options"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnEnter"
        app:layout_constraintTop_toBottomOf="@+id/listViewMain3" />

    <Button
        android:id="@+id/btnDeletePlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete Play"
        app:layout_constraintBottom_toTopOf="@+id/listViewMain3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameTitle" />

    <!--    <Button-->
    <!--        android:id="@+id/btnMedium"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Normal"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/btnEnter"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/tvTotalScoreQuestion2" />-->

    <!--    <Button-->
    <!--        android:id="@+id/btnEasy"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="60dp"-->
    <!--        android:layout_marginEnd="8dp"-->
    <!--        android:text="Easy"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/btnEnter"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/btnMedium"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/tvTotalScoreQuestion2" />-->

    <!--    <Button-->
    <!--        android:id="@+id/btnHard"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="8dp"-->
    <!--        android:layout_marginEnd="60dp"-->
    <!--        android:text="Hard"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/btnEnter"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/btnMedium"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/tvTotalScoreQuestion2" />-->

</androidx.constraintlayout.widget.ConstraintLayout>